Fix whitespace bug in <code> elements.
With `white-space: pre` you get lots of whitespace in <code> bodies if
pandoc doesn't trim perfectly.

--- a/static/codex.css
+++ b/static/codex.css
@@ -147,7 +147,7 @@ pre {
 }
 code {
   padding: 2px 6px;
-  white-space: pre; /* or else horizontally wide <pre> <code> breaks */
+  white-space: normal;
 }
 pre > code {
   /* pandoc weirdly puts all contents of <pre> inside a <code>, we don't want an
